--- a/scroll-demo-vue/package.json
+++ b/scroll-demo-vue/package.json
@@ -34,6 +34,7 @@
     "path": "^0.12.7",
     "progressive-image": "^1.2.0",
     "sass-loader": "^6.0.6",
+    "scrollmagic": "^2.0.5",
     "three": "^0.94.0",
     "three-mtl-loader": "^1.0.2",
     "three-obj-loader": "^1.1.3",
